--- a/app.wxss
+++ b/app.wxss
@@ -590,6 +590,10 @@ page {
 	width: 50%;
 }
 
+.w48 {
+	width: 48%;
+}
+
 .w45 {
 	width: 45%;
 }
@@ -604,6 +608,10 @@ page {
 
 .w30 {
 	width: 30%;
+}
+
+.w28 {
+	width: 28%;
 }
 
 .w25 {
