--- a/pages/sampleOrder/sampleOrder.scss
+++ b/pages/sampleOrder/sampleOrder.scss
@@ -1,4 +1,20 @@
 /* pages/sampleOrder/sampleOrder.wxss */
 #sampleOrder {
-  
+	.image {
+		border-radius: 0;
+		overflow: hidden;
+		width: 144rpx;
+		height: 114rpx;
+		border-radius: 8rpx;
+	}
+
+	.card{
+		margin-left: 10px;
+		margin-right: 10px;
+		width: 95vw;
+	}
+
+	.t-dropdown-menu__title {
+    font-size: 25rpx;
+  }
 }
