--- a/pages/ourFactory/ourFactory.wxml
+++ b/pages/ourFactory/ourFactory.wxml
@@ -36,12 +36,20 @@
 			<t-dropdown-item label="单位" optionsLayout="tree" options="{{clientList.options}}" value="{{clientList.value}}"
 				bindchange="changeClient" bindconfirm="confirmClient" />
 		</t-dropdown-menu>
-		<scroll-view scroll-y="true" bindscrolltolower="reqOrder" style="height:calc(100vh - 155px)">
+		<scroll-view scroll-y="true" bindscrolltolower="reqOrder" style="height:calc(100vh - 200px)">
 			<order-card wx:for="{{orderList}}" data-index="{{index}}" wx:for-item="item" wx:key="item" wx:for-index="index"
 				detailInfo="{{item}}" bindtap="toOutsourcingAcceptance"></order-card>
-			<view style="height: 20px;"></view>
+			<view style="height: 20px;" wx:if="{{!noData}}"></view>
+			<!-- 第一次查询无数据 -->
+			<view class="flex fdc vh50 color91 w100 jcc aic" wx:if="{{!isLogin || noData}}">
+				<view class="tc size-xl">
+					<image class="image" src="https://file.zwyknit.com/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20220216112643.png">
+					</image>
+					<view class="mt20">没有符合条件的数据</view>
+				</view>
+			</view>
 			<l-loadmore show="{{showLoading}}" line="{{true}}" loading-text="努力加载中~"></l-loadmore>
-			<l-loadmore show="{{isEnd}}" type="end" line="{{true}}" end-text="我也是有底线的"></l-loadmore>
+			<l-loadmore show="{{isEnd && !noData}}" type="end" line="{{true}}" end-text="我也是有底线的"></l-loadmore>
 		</scroll-view>
 	</view>
 	<view wx:elif="{{ type === '1' && isLogin}}">
@@ -52,14 +60,6 @@
 	<view wx:if="{{ type === '2' && isLogin }}" class="pof bgColor27A2 colorWhite tc"
 		style="right:10%;bottom:10%;width:30px;height: 30px; line-height:32px;border-radius:200px;" bindtap="GetSandCode">
 		<van-icon name="scan" size="18px" />
-	</view>
-	<!-- 第一次查询无数据 -->
-	<view class="flex fdc vh60 color91 w100 jcc aic" wx:if="{{!isLogin || noData}}">
-		<view class="tc size-xl">
-			<image class="image" src="https://file.zwyknit.com/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20220216112643.png">
-			</image>
-			<view class="mt20">没有符合条件的数据</view>
-		</view>
 	</view>
 	<view wx:if="{{!isLogin}}">
 		<view class="mt20 submit">
